Много чего добавил прикольного в плане карты

--- a/localisation/russian/victory_points_l_russian.yml
+++ b/localisation/russian/victory_points_l_russian.yml
@@ -903,9 +903,10 @@
  VICTORY_POINTS_998:0 "Канадзава"
  VICTORY_POINTS_9982:0 "Чэньчжоу"
  VICTORY_POINTS_3488:0 "Эйпен" 
- VICTORY_POINTS_3151:0 "Ленинград???"
+ VICTORY_POINTS_3151:0 "Неваград"
  VICTORY_POINTS_11202:0 "Псков"
  VICTORY_POINTS_9098:0 "Луга" 
  VICTORY_POINTS_9435:0 "Подольск"
  VICTORY_POINTS_422:0 "Нововолынск"
  VICTORY_POINTS_6389:0 "Киль"
+ VICTORY_POINTS_3740:0 "По"
