Вшил мод на экономику и исправил важнейшую ошибку

--- a/localisation/french/cultures_l_french.yml
+++ b/localisation/french/cultures_l_french.yml
@@ -708,7 +708,7 @@
  culture_nguni:0 "Ngunie"
  culture_nieuwereld:0 "Niouviralte"
  culture_nilotic:0 "Nilotique"
- culture_noculture:0 "§infinite"
+ culture_noculture:0 "cinfinite"
  culture_noric:0 "Norique"
  culture_north_andean:0 "Hispanique Nordandine"
  culture_north_caucasian:0 "Caucasienne Septentrionale"
