--- a/localisation/russian/parties2_l_russian.yml
+++ b/localisation/russian/parties2_l_russian.yml
@@ -1,10 +1,10 @@
 ﻿l_russian:
- radical:0 "Радикал"
- radical_noun:0 "Радикал"
- radical_desc:0 "Радикал"
- absolutist:0 "Абсолютист"
- absolutist_noun:0 "Абсолютист"
- absolutist_desc:0 "Абсолютист"
+ radical:0 "Радикализм"
+ radical_noun:0 "Радикализм"
+ radical_desc:0 "Радикализм"
+ absolutist:0 "Абсолютизм"
+ absolutist_noun:0 "Абсолютизм"
+ absolutist_desc:0 "Абсолютизм"
  minarchism:0 "Минархизм"
  minarchism_desc:0 "Либертарианская политическая философия, которая выступает за то, чтобы государство существовало исключительно для защиты граждан от агрессии, кражи, нарушения договора и мошенничества."
  absolute_monarchy:0 "Абсолютная монархия"
@@ -37,11 +37,11 @@
  leninism_neutral_desc:0 "Политическая идеология, основанная на марксистской мысли, ленинизм стремится создать социалистическое государство авангардной партией, ведущей революцию, свергающую капиталистическое общество. Когда-то у власти, партия управляет системой, в соответствии с которой политики открыты для внутренних прений до принятия решения."
  fascism_ideology_neutral:0 "Фашизм"
  fascism_ideology_neutral_desc:0 "Охватывая множество ультранационалистических движений, фашизм обычно почитает преданность государству и объединяет людей под сильным лидером."
- absolutist_drift:0 "Ежедневный переход к Абсолютисму"
+ absolutist_drift:0 "Ежедневный переход к Абсолютизму"
  radical_drift:0 "Ежедневный переход к Минархизму"
- absolutist_minister:0 "Автоархический канцлер"
+ absolutist_minister:0 "Автократический канцлер"
  communism_minister:0 "Коммунистический революционер"
  democratic_minister:0 "Демократический реформатор"
  fascism_minister:0 "Фашистский демагог"
- neutrality_minister:0 "Status Quo пропагандирующей"
+ neutrality_minister:0 "Сторонник статуса-кво"
  radical_minister:0 "Голос банкиров"
