--- a/localisation/russian/state_names_l_russian.yml
+++ b/localisation/russian/state_names_l_russian.yml
@@ -534,7 +534,7 @@
  STATE_533:0 "Курск"
  STATE_534:0 "Урал"
  STATE_535:0 "Северная Сибирь"
- STATE_536:0 "Ленинград???"
+ STATE_536:0 "Неваград"
  STATE_537:0 "Русск. Высший Енисейск"
  STATE_538:0 "Иркутск"
  STATE_539:0 "Якутск"
@@ -904,7 +904,9 @@
  STATE_903:0 "Зуар"
  STATE_904:0 "Дикатонг"
  STATE_905:0 "Эйпен-Малмеди"
- STATE_906:0 "Томск???" 
+ STATE_906:0 "Томск" 
  STATE_907:0 "Нововолынск"
  STATE_908:0 "Подольск"
  STATE_909:0 "Киль"
+ STATE_910:0 "По"
+ STATE_911:0 "Ош"
