--- a/localisation/russian/countries_l_russian.yml
+++ b/localisation/russian/countries_l_russian.yml
@@ -3800,20 +3800,20 @@
  S32_neutrality_DEF:0 "Г‚Г Г°ГїГ¦Гј"
  S32_radical:0 "Г‚Г Г°ГїГ¦Гј"
  S32_radical_DEF:0 "Г‚Г Г°ГїГ¦Гј"
- S33:0 "ГЂГ§Г Г­ГЁГї"
- S33_DEF:0 "ГЂГ§Г Г­ГЁГї"
- S33_absolutist:0 "ГЂГ§Г Г­ГЁГї"
- S33_absolutist_DEF:0 "ГЂГ§Г Г­ГЁГї"
- S33_communism:0 "ГЂГ§Г Г­ГЁГї"
- S33_communism_DEF:0 "ГЂГ§Г Г­ГЁГї"
- S33_democratic:0 "ГЂГ§Г Г­ГЁГї"
- S33_democratic_DEF:0 "ГЂГ§Г Г­ГЁГї"
- S33_fascism:0 "ГЂГ§Г Г­ГЁГї"
- S33_fascism_DEF:0 "ГЂГ§Г Г­ГЁГї"
- S33_neutrality:0 "ГЂГ§Г Г­ГЁГї"
- S33_neutrality_DEF:0 "ГЂГ§Г Г­ГЁГї"
- S33_radical:0 "ГЂГ§Г Г­ГЁГї"
- S33_radical_DEF:0 "ГЂГ§Г Г­ГЁГї"
+ S33:0 "Племена"
+ S33_DEF:0 "Племена"
+ S33_absolutist:0 "Племена"
+ S33_absolutist_DEF:0 "Племена"
+ S33_communism:0 "Племена"
+ S33_communism_DEF:0 "Племена"
+ S33_democratic:0 "Племена"
+ S33_democratic_DEF:0 "Племена"
+ S33_fascism:0 "Племена"
+ S33_fascism_DEF:0 "Племена"
+ S33_neutrality:0 "Племена"
+ S33_neutrality_DEF:0 "Племена"
+ S33_radical:0 "Племена"
+ S33_radical_DEF:0 "Племена"
  S34:0 "ГЌГЁГЈГҐГ°"
  S34_DEF:0 "ГЌГЁГЈГҐГ°"
  S34_absolutist:0 "ГЌГЁГЈГҐГ°"
