Добавил Новгороду правителя

--- a/localisation/russian/converted_character_localisation_l_russian.yml
+++ b/localisation/russian/converted_character_localisation_l_russian.yml
@@ -1902,3 +1902,5 @@
  ZAM_ian_jellicoe:0 "Ian Jellicoe"
  LOT_adrien_linville:0 "Адриан Линвилл"
  LOT_adrien_linville_DESC:0 "Внимание! Этот мужик тупо съел Бизарыча! Господи блять!"
+ NOV_grigoriy_rurikovich:0 "Григорий II"
+ NOV_grigoriy_rurikovich_DESC:0 "Его Величество, Князь Григорий Рюрикович"
