--- a/localisation/russian/traits_l_russian.yml
+++ b/localisation/russian/traits_l_russian.yml
@@ -1198,3 +1198,4 @@
  shrouded_in_mystery:0 "Под завесой тайны"
  
  internal_politics_balance_supporter:0 "Сторонник баланса во внутренней политике"
+ knyaz_of_freedom:0 "Князь Свободы"
