--- a/localisation/russian/state_names_l_russian.yml
+++ b/localisation/russian/state_names_l_russian.yml
@@ -910,4 +910,8 @@
  STATE_909:0 "Киль"
  STATE_910:0 "По"
  STATE_911:0 "Ош"
- STATE_912:1 "Финнмарк"
+ STATE_912:0 "Финнмарк"
+ STATE_913:0 "Саламанка"
+ STATE_914:0 "Толедо"
+ STATE_915:0 "Бургос"
+ STATE_916:0 "Бильбао"
