--- a/localisation/russian/victory_points_l_russian.yml
+++ b/localisation/russian/victory_points_l_russian.yml
@@ -911,3 +911,5 @@
  VICTORY_POINTS_6389:0 "Киль"
  VICTORY_POINTS_3740:0 "По"
  VICTORY_POINTS_6766:0 "Ош"
+ VICTORY_POINTS_885:0 "Бургос"
+ VICTORY_POINTS_11688:0 "Бильбао"
