Переделал границы во Франции

--- a/localisation/russian/victory_points_l_russian.yml
+++ b/localisation/russian/victory_points_l_russian.yml
@@ -913,3 +913,4 @@
  VICTORY_POINTS_6766:0 "Ош"
  VICTORY_POINTS_885:0 "Бургос"
  VICTORY_POINTS_11688:0 "Бильбао"
+ VICTORY_POINTS_6651:0 "Сен-Савен"
